--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,42 @@
   <name>angel-test</name>
   <url>http://maven.apache.org</url>
 
+
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>tx_angel</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>tx_angel</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
+
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>com.tencent.angel</groupId>
+      <artifactId>angel-ps-core</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.tencent.angel</groupId>
+      <artifactId>angel-ps-mllib</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.tencent.angel</groupId>
+      <artifactId>angel-ps-psf</artifactId>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
+
 </project>
